--- a/testvite/index.html
+++ b/testvite/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-    <title>React Testing</title>
+    <title>React Learning And Testing</title>
   </head>
   <body>
     <div id="root"></div>
